# dell_franka_ros2_ws

./: .gitignore  README.md  TODAY_LLM_ANYGRASP_LOG.md
docs/: run_anygrasp_pick_place.md  run_yolo_pipeline.md  setup_dependencies.md
src/anygrasp_ros2_bridge/: package.xml  setup.cfg  setup.py
src/anygrasp_ros2_bridge/anygrasp_ros2_bridge/: anygrasp_candidates_to_base_node.py  anygrasp_detection_node.py  anygrasp_hover_test_node.py  anygrasp_pose_to_base_node.py
src/franka_ros2/franka_bringup/launch/: franka.launch.py
src/franka_ros2/franka_fr3_moveit_config/launch/: moveit.launch.py
src/franka_ros2/franka_hardware/: CMakeLists.txt
src/franka_visual_servo/: CMakeLists.txt  README_pipeline_final.md  package.xml
src/franka_visual_servo/config/: yolo_hover_linear_final.yaml  yolo_hover_linear_params.yaml
src/franka_visual_servo/launch/: camera_to_fr3_static_tf.launch.py  static_tf_camera_to_base.launch.py  yolo_hover_linear.launch.py  yolo_hover_linear_final.launch.py
src/franka_visual_servo/src/: anygrasp_hover_move_node.cpp  anygrasp_pick_place_node.cpp  fr3_finger_joint_state_publisher_node.cpp  franka_visual_servo.cpp  gpd_client_node.cpp  gpd_grasp_tf_node.cpp  gpd_pick_execute_node.cpp  move_left_10cm_node.cpp  move_relative_tcp_node.cpp  move_to_ready_pose_node.cpp  move_to_xyz_node.cpp  yolo_hover_linear_node.cpp
src/yolo_detector/: package.xml  setup.py
src/yolo_detector/yolo_detector/: yolo_compressed_node.py
src/yolo_webcam_pkg/: package.xml  setup.cfg  setup.py
src/yolo_webcam_pkg/yolo_webcam_pkg/: center_error_node.py  llm_anygrasp_pose_filter_node.py  llm_anygrasp_trigger_node.py  llm_command_parser.py  llm_pick_bridge_node.py  llm_target_hover_node.py  pixel_servo_node.py  safe_home_node.py  voice_llm_pick_bridge_node.py  webcam_node.py  yolo_3d_to_base_node.py  yolo_center_to_base_node.py  yolo_depth_to_3d_node.py  yolo_node.py
