<?xml version="1.0"?>
<package format="3">
  <name>anygrasp_ros2_bridge</name>
  <version>0.0.1</version>
  <description>ROS 2 bridge for running AnyGrasp detection on RealSense aligned RGB-D frames.</description>
  <maintainer email="jairlab@todo.todo">jairlab</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
